- P4A_I18N now uses P4A::getCache() to pass an overridden Zend_Cache object to
  Zend_Locale_Data
- a bug with "onreturnpress" and IE was fixed
- a bug with multicple CKEditor instances (loaded via AJAX call) and IE
  was solved
- CKEditor's forcePasteAsPlainText option was enabled again
- jQuery::form was updated to 2.47
- file upload percentage and speed is shown while uploading
  (if PECL uploadprogress is available)

3.6.2
- P4A_Field::setSource() now correctly handles null param
- CKEditor was updated to 3.4
- P4A_DB_Source::getRowPosition() now correctly handles multivalue fields
  (bug #3057839)
- forcing IE to use his latest rendering engine
- some javascript fixes were applied to make IE ajax system work
- Zend Framework was updated to 1.10.8
- P4A_I18N now correcly handles 3 chars languages (like "fil")
- translations were updated
- Filipino translation was added (thanks to Elin Eon)

3.6.1
- P4A_DB_Source::load() now returns an object also when setQuery() is used
- P4A_DB_Source::load()'s autosequence creation now checks that the field
  exists before calling the setSequence()
- a bug with P4A_Redirect_To_Url and P4A_Redirect_To_File was solved
  (bug #3039449)
- better focus management for P4A_Grid
- a bug with AJAX javascript returning and html entities was solved

3.6.0

- Zend Framework was updated to 1.10.3
- FCKEditor was dropped and CKEditor 3.3 was added
- all AJAX stack was rewritten to use JSON instead of XML
- in full AJAX environment external javascripts are loaded only if
  they were not loaded before
- in full AJAX environment widgets can now execute javascript code before
  or after the HTML substitution
- focus internal management was rewritten
- P4A_Mask::setLeftSidebarWidth(), setRightSidebarWidth(),
  getLeftSidebarWidth() and getRightSidebarWidth() methods were added
- jQuery::form was updated to 2.43
- jQuery was updated to 1.4.2
- jQuery UI was updated to 1.8.1
- jQuery::autocomplete plugin was replaced by jQuery UI autocomplete