@@ -30,7 +30,8 @@
 - CKEditor's forcePasteAsPlainText option was enabled again
 - jQuery::form was updated to 2.47
 - file upload percentage and speed is shown while uploading
-  (if PECL uploadprogress is available)
+  (if PECL uploadprogress is available, APC not implemented beacuse it does
+  not work with PHP CGI)
 
 3.6.2
 - P4A_Field::setSource() now correctly handles null param
